manifests/k3d/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hideyhole
  namespace: hideyhole
  labels:
    app: hideyhole
spec:
  ports:
    - port: 8080
  selector:
    app: hideyhole
  type: NodePort
