manifests/k3d/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hideyhole
  namespace: hideyhole
  labels:
    app: hideyhole
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-tls-redirect@kubernetescrd
spec:
  rules:
  - host: hideyhole.chainfire.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hideyhole
            port:
              number: 8080
  tls:
    - secretName: hideyhole-tls
      hosts:
        - hideyhole.chainfire.eu
